caught dumb styling issue with my logs due to viewport, setting nowrap on whitespace solved the issue over ul, ol elements

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -108,3 +108,9 @@ hr {
 table, th, td {
   padding: 5px;
 }
+
+ul, ol {
+    @media(max-width: $phone-max-width) {
+        white-space: nowrap;
+    }
+}
